--- a/MailKitDemo/appsettings.json
+++ b/MailKitDemo/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "MailSettings": {
-    "DisplayName": "Christian Schou",
+    "DisplayName": "Rolando Hagenes",
     "From": "christian@christian-schou.dk",
     "Host": "smtp.ethereal.email",
-    "Password": "upPftsKAqgcFKKmX8W",
+    "Password": "yAaVzewFm5d7kj7xBX",
     "Port": 587,
-    "UserName": "joesph.beatty9@ethereal.email",
+    "UserName": "rolando.hagenes@ethereal.email",
     "UseSSL": false,
     "UseStartTls": true
   }
